--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ markdown: kramdown
 # so be sure to set them if your theme uses them.
 #
 title : Mapping Cultures in the Big Tent
-tagline: 
+tagline:
 author :
   name : Jake Kaupp
   email : jkaupp@gmail.com
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://jkaupp.github.io
+production_url : https://jkaupp.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -54,7 +54,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : http://jkaupp.github.io/DHQ
+  BASE_PATH : https://jkaupp.github.io/DHQ
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
